Fix: Bug with infinity loop in monthly payment calculator and overflow in footer

--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,11 +1,8 @@
 footer {
   border-top: solid 1px #6767d4;
-  padding-top: 1rem;
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  padding-top: 1.7rem;
   width: 100%;
-  height: 40px;
+  height: 55px;
   background-color: #0ea5c6;
   text-align: center;
 }
